--- a/WCSTrainer/Pages/Shared/_Layout.cshtml
+++ b/WCSTrainer/Pages/Shared/_Layout.cshtml
@@ -44,4 +44,16 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 
+<script>
+    function enableLightMode() {
+        document.documentElement.classList.add('light-mode');
+    }
+
+    const isLightMode = localStorage.getItem('lightMode') === 'true';
+
+    if (isLightMode) {
+        enableLightMode();
+    }
+</script>
+
 </html>
