--- a/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
@@ -15,15 +15,19 @@
                 <p class="title">Approve Training Order #@Html.DisplayFor(model => model.TrainingOrder.Id)</p>
                 <div class="field-container">
                     <form method="post">
-                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <div asp-validation-summary="All" class="text-danger"></div>
                         <input type="hidden" asp-for="TrainingOrder.Id" />
-                        <input asp-for="TrainingOrder.Status" type="hidden" value="Active"/>
-                        <input asp-for="TrainingOrder.CreateDate" type="hidden"/>
-                        <input asp-for="TrainingOrder.LocationId" type="hidden"/>
-                        <input asp-for="TrainingOrder.Duration" type="hidden"/>
-                        <input asp-for="TrainingOrder.TraineeId" type="hidden"/>
-                        <input asp-for="TrainingOrder.Medium" type="hidden"/>
-                        <input asp-for="TrainingOrder.Description" type="hidden"/>
+                        
+                        <input asp-for="TrainingOrder.CreateDate" type="hidden" />
+
+                        <input asp-for="TrainingOrder.Medium" type="hidden" />
+                        <input asp-for="TrainingOrder.Status" type="hidden" value="Active" />
+                        <input asp-for="TrainingOrder.Duration" type="hidden" />
+                        <input asp-for="TrainingOrder.Priority" type="hidden" />
+                        <input asp-for="TrainingOrder.Description" type="hidden" />
+
+                        <input asp-for="TrainingOrder.TraineeId" type="hidden" />
+                        <input asp-for="TrainingOrder.LocationId" type="hidden" />
 
                         <input type="hidden" id="employeesData" value="@ViewData["EmployeesJson"]" />
                         <input type="hidden" id="trainergroupsData" value="@ViewData["TrainerGroupsJson"]" />
