--- a/WCSTrainer/Pages/TrainingOrders/Conclude.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Conclude.cshtml
@@ -14,15 +14,19 @@
                     <form method="post">
                         <div asp-validation-summary="All" class="text-danger"></div>
                         <input type="hidden" asp-for="TrainingOrder.Id"/>
-                        <input asp-for="TrainingOrder.CreateDate" type="hidden" />
+
                         <input asp-for="TrainingOrder.BeginDate" type="hidden" />
-                        <input asp-for="TrainingOrder.LocationId" type="hidden" />
-                        <input asp-for="TrainingOrder.Duration" type="hidden" />
-                        <input asp-for="TrainingOrder.TraineeId" type="hidden" />
                         <input asp-for="TrainingOrder.EndDate" type="hidden" />
+                        <input asp-for="TrainingOrder.CreateDate" type="hidden" />
+
                         <input asp-for="TrainingOrder.Medium" type="hidden" />
-                        <input asp-for="TrainingOrder.Skills" type="hidden" />
                         <input asp-for="TrainingOrder.Status" type="hidden" value="Completed" />
+                        <input asp-for="TrainingOrder.Duration" type="hidden" />
+                        <input asp-for="TrainingOrder.Priority" type="hidden" />
+                        <input asp-for="TrainingOrder.Description" type="hidden" />
+
+                        <input asp-for="TrainingOrder.TraineeId" type="hidden" />
+                        <input asp-for="TrainingOrder.LocationId" type="hidden" />
 
                         <component type="typeof(TrainingDetails)"
                                    render-mode="WebAssemblyPrerendered"
