--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -73,13 +73,25 @@ nav {
             flex-direction: row;
             display: flex;
             gap: 10px;
+            display: flex;
+            height: 100%;
+            justify-content: center;
+            align-items: center;
         }
 
             nav .nav-container .nav-options a, form button {
                 padding: 5px 10px;
                 font-size: 15px;
-                height: 100%;
             }
+
+            nav .nav-container .nav-options .login-email {
+                font-size: 18px;
+                color: var(--textSub2);
+            }
+
+                nav .nav-container .nav-options .login-email:hover {
+                    text-decoration: underline;
+                }
 
 .panel {
     display: flex;
@@ -101,7 +113,7 @@ nav {
             display: flex;
         }
 
-            .panel .body .side-bar ul {
+            .panel .body .side-bar .link-list {
                 flex-direction: column;
                 display: flex;
                 width: 100%;
@@ -206,7 +218,7 @@ nav {
 
                     .panel .body .properties .user-form .field-container .form-group .form-control {
                         border: none;
-                        height: 25px;
+                        height: 30px;
                         width: 100%;
                         background: var(--gray1);
                         color: var(--textMain);
@@ -227,7 +239,7 @@ nav {
                     .panel .body .properties .user-form .field-container .form-group .form-drop2 {
                         display: block;
                         border: none;
-                        height: 25px;
+                        height: 30px;
                         width: 100%;
                         background-color: var(--gray1);
                         color: var(--textMain);
@@ -248,15 +260,15 @@ nav {
                             flex-grow: 1;
                         }
 
-                        .panel .body .properties .user-form .field-container .form-group .selector {
-                        }
+                    .panel .body .properties .user-form .field-container .form-group .selector {
+                    }
 
-                            .panel .body .properties .user-form .field-container .form-group .btn {
-                                font-size: 15px;
-                                padding: 5px 10px;
-                                min-width: fit-content;
-                                height: fit-content;
-                            }
+                    .panel .body .properties .user-form .field-container .form-group .btn {
+                        font-size: 15px;
+                        padding: 5px 10px;
+                        min-width: fit-content;
+                        height: fit-content;
+                    }
 
                 .panel .body .properties .user-form .field-container .text-group {
                     border-bottom: 1px solid var(--gray3);
@@ -496,7 +508,7 @@ nav {
                         flex-direction: column;
                     }
 
-                        
+
 
                 .panel .body .properties .order-list2 table {
                     padding-right: 20px;
