--- a/WCSTrainer/wwwroot/css/colors.css
+++ b/WCSTrainer/wwwroot/css/colors.css
@@ -22,8 +22,8 @@
 .light-mode {
     --black: #ffffff;
     --gray1: #dddddd;
-    --gray2: #aaaaaa;
-    --gray3: #999999;
+    --gray2: #b2b2b2;
+    --gray3: #c6c6c6;
     --gray4: #555555;
     --textMain: #000000;
     --textSub1: #000000;
