--- a/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
@@ -32,15 +32,30 @@
                         <input type="hidden" id="employeesData" value="@ViewData["EmployeesJson"]" />
                         <input type="hidden" id="trainergroupsData" value="@ViewData["TrainerGroupsJson"]" />
 
+
                         <div class="form-group">
                             <div class="form">
                                 <div class="labels">
+                                    <p class="control-label">Trainers</p>
                                     <span asp-validation-for="@Model.SelectedTrainerString" class="text-danger"></span>
                                 </div>
                                 <div class="selections">
-                                    <div class="btn bg-btn btnWhite" onclick="openComponent('trainers')"><p>Select Trainers</p></div>
                                     <ul id="trainerList" class="pill-container"></ul>
-                                    <input id="trainersInput" asp-for="@Model.SelectedTrainerString" hidden/>
+                                    <div class="btn bg-btn btnWhite" onclick="openComponent('trainers')"><p>Select</p></div>
+                                    <input id="trainersInput" asp-for="@Model.SelectedTrainerString" hidden />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="form">
+                                <div class="labels">
+                                    <p class="control-label">Trainer Groups</p>
+                                    <span asp-validation-for="@Model.SelectedTrainerGroupString" class="text-danger"></span>
+                                </div>
+                                <div class="selections">
+                                    <ul id="groupList" class="pill-container"></ul>
+                                    <div class="btn bg-btn btnWhite" onclick="openComponent('groups')">Select</div>
+                                    <input id="groupsInput" asp-for="@Model.SelectedTrainerGroupString" hidden />
                                 </div>
                             </div>
                         </div>
@@ -99,16 +114,20 @@
     var trainergroupsData = trainergroupsDataElement.value ? JSON.parse(trainergroupsDataElement.value) : [];
     window.trainergroupsData = trainergroupsData;
 
-    var employeesDataElement = document.getElementById('employeesData');
-    var trainergroupsDataElement = document.getElementById('trainergroupsData');
-
     var peopleComponent = document.getElementById("sv-comp-people");
     var overlay = document.querySelector(".overlay");
     var trainersInput = document.getElementById("trainersInput");
     var trainList = document.getElementById("trainerList");
     var trainee = document.getElementById("trainee");
     var traineeInput = document.getElementById("traineeInput");
+    var groupsInput = document.getElementById("groupsInput");
+    var groupList = document.getElementById("groupList");
     var person = document.getElementsByClassName("person");
+    var group = document.getElementsByClassName("group");
+
+    var trainerClasses = "pill person"
+    var traineeClasses = "pill person trainee"
+    var groupClasses = "pill group"
 
     document.addEventListener('DOMContentLoaded', function () {
 
@@ -134,8 +153,19 @@
             }
         });
 
+        safeAddEventListener(groupList, "click", function (event) {
+            if (event.target.tagName === "LI") {
+                event.target.remove();
+                updateGroupsInput();
+            }
+        });
+
         Array.from(person).forEach(item => {
             safeAddEventListener(item, "click", addTrainer);
+        });
+
+        Array.from(group).forEach(item => {
+            safeAddEventListener(item, "click", addGroup);
         });
 
         function addTrainer(trainerItems) {
@@ -145,8 +175,8 @@
             if (!trainerList) return;
 
             trainerItems.forEach(item => {
-                if (!Array.from(trainerList.getElementsByTagName("li")).some(li => li.getAttribute("value").trim() === item.id)) {
-                    trainerList.innerHTML += `<li value="${item.id}" class="pill">${item.name}</li>`;
+                if (!Array.from(trainerList.getElementsByTagName("li")).some(li => li.getAttribute("value") == item.id)) {
+                    trainerList.innerHTML += `<li value="${item.id}" class="${trainerClasses}">${item.name}</li>`;
                 }
             });
 
@@ -159,8 +189,23 @@
             var traineeList = document.getElementById("trainee");
             if (!traineeList) return;
 
-            traineeList.innerHTML = `<li value="${traineeId}" class="pill">${traineeName.trim()}</li>`;
+            traineeList.innerHTML = `<li value="${traineeId}" class="${traineeClasses}">${traineeName.trim()}</li>`;
             updateTraineeInput();
+        }
+
+        function addGroup(groupItems) {
+            if (!groupItems || groupItems.length === 0) return;
+
+            var groupList = document.getElementById("groupList");
+            if (!groupList) return;
+
+            groupItems.forEach(item => {
+                if (!Array.from(groupList.getElementsByTagName("li")).some(li => li.getAttribute("value") == item.id)) {
+                    groupList.innerHTML += `<li value="${item.id}" class="${groupClasses}">${item.name}</li>`;
+                }
+            });
+
+            updateGroupsInput();
         }
 
         function updateTrainersInput() {
@@ -177,6 +222,13 @@
             traineeInput.value = traineeListItems.length > 0 ? traineeListItems[0].getAttribute("value") : "";
         }
 
+        function updateGroupsInput() {
+            if (!groupList || !groupsInput) return;
+
+            var groupListItems = Array.from(groupList.getElementsByTagName("li"));
+            groupsInput.value = groupListItems.map(item => `${item.getAttribute("value")}`).join(", ");
+        }
+
         if (trainList) {
             const trainerListObserver = new MutationObserver(updateTrainersInput);
             trainerListObserver.observe(trainList, { childList: true, subtree: true });
@@ -185,6 +237,11 @@
         if (trainee) {
             const traineeObserver = new MutationObserver(updateTraineeInput);
             traineeObserver.observe(trainee, { childList: true, subtree: true });
+        }
+
+        if (groupList) {
+            const groupListObserver = new MutationObserver(updateGroupsInput);
+            groupListObserver.observe(groupList, { childList: true, subtree: true });
         }
 
         document.addEventListener("addTrainerEvent", function (event) {
@@ -197,8 +254,14 @@
             closeComponent();
         });
 
+        document.addEventListener("addGroupEvent", function (event) {
+            addGroup(event.detail.items);
+            closeComponent();
+        });
+
         updateTrainersInput();
         updateTraineeInput();
+        updateGroupsInput();
     });
 
     function openComponent(mode) {
@@ -218,7 +281,6 @@
         if (overlay) overlay.classList.add("hidden");
     }
 </script>
-
 
 @section Scripts {
     @{
