--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -198,7 +198,7 @@ nav {
 
                     .panel .body .properties .user-form .field-container .form-group .form {
                         flex-direction: column;
-                        min-height: 45px;
+                        min-height: fit-content;
                         display: flex;
                         width: 100%;
                     }
@@ -249,18 +249,19 @@ nav {
                     .panel .body .properties .user-form .field-container .form-group .selections {
                         display: flex;
                         gap: 10px;
-                        min-height: fit-content;
                     }
 
                         .panel .body .properties .user-form .field-container .form-group .selections .pill-container {
-                            border-bottom: 1px solid var(--gray4);
+                            border: 1px solid var(--gray4);
                             flex-direction: row;
                             flex-wrap: wrap;
                             display: flex;
-                            min-height: 100%;
-                            height: fit-content;
+                            min-height: fit-content;
                             flex-grow: 1;
                             gap: 5px;
+                            align-content: flex-end;
+                            padding: 5px;
+                            background-color: var(--black);
                         }
 
                     .panel .body .properties .user-form .field-container .form-group .selector {
@@ -271,6 +272,7 @@ nav {
                         padding: 5px 10px;
                         min-width: fit-content;
                         height: fit-content;
+                        align-self: flex-end;
                     }
 
                 .panel .body .properties .user-form .field-container .text-group {
