--- a/WCSTrainer/wwwroot/css/universal.css
+++ b/WCSTrainer/wwwroot/css/universal.css
@@ -41,13 +41,16 @@ button {
 }
 
 .pill {
+    display: flex;
+    align-items: center;
     list-style: none;
-    text-align: center;
     cursor: pointer;
-    padding: 2px 7px;
+    padding: 2px 6px;
     border-radius: 3px;
     height: fit-content;
     user-select: none;
+    font-weight: 500;
+    font-size: 15px;
 }
 
 pre {
