Print & Assign page

--- a/WCSTrainer/Pages/TrainingOrders/Details.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Details.cshtml
@@ -10,17 +10,17 @@
         <component type="typeof(Sidebar)" render-mode="WebAssemblyPrerendered" />
         <div class="properties">
             <div class="user-form">
-                <p class="title">Training Order #@Model.TrainingOrder.Id</p>
-                <div class="field-container">
-                    <component 
-                        type="typeof(TrainingDetails)" 
-                        render-mode="WebAssemblyPrerendered" 
-                        param-OrderId="@Model.TrainingOrder.Id" 
-                    />
+                <div id="contentToPrint" class="print-block">
+                    <p class="title">Training Order #@Model.TrainingOrder.Id</p>
+                    <div class="field-container">
+                        <component type="typeof(TrainingDetails)"
+                                   render-mode="WebAssemblyPrerendered"
+                                   param-OrderId="@Model.TrainingOrder.Id" />
+                    </div>
                 </div>
                 <br />
                 <div class="btn-container">
-                    @if (!Model.TrainingOrder.Status.Equals("Completed") & !Model.TrainingOrder.Status.Equals("Verified")) {
+                    @if (!Model.TrainingOrder.Status.Equals("Completed") && !Model.TrainingOrder.Status.Equals("Verified")) {
                         <a class="btn bg-btn btnGreen" asp-page="./Edit" asp-route-id="@Model.TrainingOrder.Id">
                             Edit Order
                         </a>
@@ -38,9 +38,22 @@
                             Verify Order
                         </a>
                     }
+                    <img id="printButton" class="btn bg-btn btnWhite" src="/images/print.png">
                 </div>
             </div>
         </div>
     </div>
 </div>
 
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        var printButton = document.getElementById('printButton');
+        if (printButton) {
+            printButton.addEventListener('click', function() {
+                window.print();
+            });
+        } else {
+            console.error('Print button not found');
+        }
+    });
+</script>
