--- a/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
@@ -80,7 +80,7 @@
                         <div class="form-group">
                             <div class="form">
                                 <div class="labels">
-                                    <p class="control-label">Skill</p>
+                                    <p class="control-label">Description</p>
                                     <span asp-validation-for="TrainingOrder.Description" class="text-danger"></span>
                                 </div>
                                 <textarea 
